force-app/main/default/objects/Marks__c/Marks__c.object-meta.xml
<CustomObject>
    <label>Marks</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Marks ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>