force-app/main/default/objects/Marks__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid Term I</fullName>
            </value>
            <value>
                <fullName>Mid Term II</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Assignment I</fullName>
            </value>
            <value>
                <fullName>Assignment II</fullName>
            </value>
            <value>
                <fullName>Lab Practical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>