force-app/main/default/objects/Marks__c/fields/Marks_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Marks_Obtained__c</fullName>
    <description>Marks scored by the student</description>
    <label>Marks Obtained</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>