force-app/main/default/objects/Marks__c/fields/Maximum_Marks__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Marks__c</fullName>
    <formula>CASE(
    Exam_Type__c,
    &quot;Mid Term I&quot;, 40,
    &quot;Mid Term II&quot;, 60,
    &quot;Quiz&quot;, 10,
    &quot;Assignment I&quot;, 10,
    &quot;Assignment II&quot;, 10,
    &quot;Lab Practical&quot;, 30,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>