force-app/main/default/objects/Marks__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Links marks to a specific student</description>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Marks</relationshipLabel>
    <relationshipName>Marks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>