force-app/main/default/objects/Marks__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associates marks with a subject</description>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Marks</relationshipLabel>
    <relationshipName>Marks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>