force-app/main/default/objects/Marks__c/validationRules/Exam_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Exam_Type__c))</errorConditionFormula>
    <errorDisplayField>Exam_Type__c</errorDisplayField>
    <errorMessage>Please select an exam type.</errorMessage>
</ValidationRule>