force-app/main/default/objects/Marks__c/validationRules/Marks_Within_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_Within_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>Marks_Obtained__c &gt; Maximum_Marks__c</errorConditionFormula>
    <errorDisplayField>Marks_Obtained__c</errorDisplayField>
    <errorMessage>Marks obtained cannot be greater than maximum marks.</errorMessage>
</ValidationRule>