force-app/main/default/objects/Marks__c/validationRules/Subject_Link_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Subject_Link_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Subject__c)</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>Please select a subject for this marks entry.</errorMessage>
</ValidationRule>